# rust-oracle

./: .gitignore  .travis.yml  Cargo.toml  ChangeLog.md  README.md  build.rs  notes.md  run-bindgen.sh
.cargo/: config.toml
.github/workflows/: gh-pages.yml  run-tests.yml
.travis/: setup_accounts.sh
.travis/oracle/: download.sh  install.sh
docs/: crates.js  help.html  index.html  query-methods.md  search-index.js  settings.html  source-files.js  src-files.js
docs/oracle/: all.html  derive.RowValue.html  enum.ConnStatus.html  enum.Error.html  enum.ErrorKind.html  enum.Privilege.html  enum.ShutdownMode.html  enum.StartupMode.html  enum.StatementType.html  enum.StmtParam.html  index.html  sidebar-items.js  struct.Batch.html  struct.BatchBuilder.html  struct.ColumnInfo.html  struct.Connection.html  struct.Connector.html  struct.DbError.html  struct.InitParams.html  struct.ParseOracleTypeError.html  struct.ResultSet.html  struct.Row.html  struct.SqlValue.html  struct.Statement.html  struct.StatementBuilder.html  struct.Version.html  trait.BatchBindIndex.html  trait.BindIndex.html  trait.ColumnIndex.html  trait.RowValue.html  type.Result.html
docs/oracle/aq/: enum.DeqMode.html  enum.DeqNavigation.html  enum.MessageDeliveryMode.html  enum.MessageState.html  enum.Visibility.html  index.html  sidebar-items.js  struct.DeqOptions.html  struct.EnqOptions.html  struct.MsgProps.html  struct.Queue.html  trait.Payload.html
docs/oracle/batch/: struct.Batch.html  struct.BatchBuilder.html  trait.BatchBindIndex.html
docs/oracle/conn/: enum.CloseMode.html  enum.Purity.html  enum.ServerType.html  index.html  sidebar-items.js  struct.Info.html
docs/oracle/connection/: enum.ConnStatus.html  enum.Privilege.html  enum.ShutdownMode.html  enum.StartupMode.html  struct.Connection.html  struct.Connector.html
docs/oracle/context/: struct.InitParams.html
docs/oracle/error/: enum.Error.html  enum.ErrorKind.html  struct.DbError.html  struct.ParseOracleTypeError.html
docs/oracle/io/: index.html  sidebar-items.js  trait.SeekInChars.html
docs/oracle/oci_attr/: index.html  sidebar-items.js  struct.CallTime.html  struct.CollectCallTime.html  struct.DefaultLobPrefetchSize.html  struct.MaxOpenCursors.html  struct.SqlFnCode.html  (+4 more)
examples/: print-oracle-version.rs  scott-emp.rs  select.rs  shutdown-database.rs  startup-database.rs
odpi-ext/: dpi-ext.c  dpi-ext.h
oracle-procmacro/: Cargo.toml  ChangeLog.md
oracle_procmacro/: Cargo.toml  README.md
oracle_procmacro/docs/: README.md  row_value.md
oracle_procmacro/src/: derive_row_value.rs  lib.rs  remove_stmt_lifetime.rs
rust-oracle-derive/: Cargo.toml
src/: aq.rs  batch.rs  binding.rs  binding_impl.rs  conn.rs  connection.rs  context.rs  encoding.rs  error.rs  ffi.rs  io.rs  lib.rs  main.rs  odpi.rs  oracle_type.rs  pool.rs  procmacro.rs  row.rs  sql_value.rs  statement.rs  types.rs  util.rs  value.rs  value_ref.rs  version.rs
src/binding/: binding.rs  binding_impl.rs
src/oci_attr/: data_type.rs  handle.rs  mod.rs  mode.rs
src/sql_type/: chrono.rs  collection.rs  interval_ds.rs  interval_ym.rs  lob.rs  mod.rs  object.rs  oracle_type.rs  ref_cursor.rs  timestamp.rs  vector.rs
src/types/: chrono.rs  interval_ds.rs  interval_ym.rs  mod.rs  object.rs  oracle_type.rs  timestamp.rs  version.rs
src/util/: unix.rs  windows.rs
tests/: SetupTest.sql  bind.rs  client_version.rs  connection.rs  from_to_sql.rs  object.rs  object_type.rs  procmacro.rs  statement.rs
tests/common/: mod.rs
tests/sql/: README.md
(+181 files in other folders)
