[workspace]

[package]
name = "oracle"
version = "0.6.2"
authors = ["Kubo Takehiro <kubo@jiubao.org>"]
build = "build.rs"
repository = "https://github.com/kubo/rust-oracle"
license = "UPL-1.0/Apache-2.0"
keywords = ["oracle", "database"]
readme = "README.md"
description = "Oracle binding"
edition = "2021"
rust-version = "1.60.0"

[package.metadata.docs.rs]
features = ["chrono", "aq_unstable"]

[features]
aq_unstable = []
struct_error = [] # Don't use this at present.

[dependencies]
once_cell = "1.19.0"
paste = "1.0.5"
chrono = { version = "0.4.20", optional = true, default-features = false, features = ["clock"] }
oracle_procmacro = { version = "0.1.2", path = "./oracle_procmacro" }

[target.'cfg(windows)'.dependencies]
rustversion = "1.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
uuid = "0.8"
