[package]
name = "oracle_procmacro"
version = "0.1.0"
authors = ["Simon Naumov <daretoodefy@gmail.com>"]
repository = "https://github.com/kubo/rust-oracle"
license = "UPL-1.0/Apache-2.0"
keywords = ["oracle", "database"]
description = "Procedural macro for the oracle crate"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
darling = "0.13"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
